--- a/templates/alertform/new_Leads.html
+++ b/templates/alertform/new_Leads.html
@@ -14,58 +14,61 @@
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="text" id="Client_name" name="Client_name" class="form-control" />
-                                    <label class="form-label" for="form12">Client Name</label>
+                                    <input type="text" id="Client_name" name="Client_name" class="form-control"/>
+                                    <label class="form-label" for="Client_name">Client Name</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="number" id="Client_number" name="Client_number" class="form-control" />
-                                    <label class="form-label" for="form12">Client Number</label>
+                                    <input type="number" id="Client_number" name="Client_number" class="form-control"/>
+                                    <label class="form-label" for="Client_number">Client Number</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="text" id="Company_name" name="Company_name" class="form-control" />
-                                    <label class="form-label" for="form12">Company Name</label>
+                                    <input type="text" id="Company_name" name="Company_name" class="form-control"/>
+                                    <label class="form-label" for="Company_name">Company Name</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
-                                <div class="form-outline" data-mdb-input-init>
-                                    <input list="company_names" id="Company_type" name="Company_type" class="form-control" />
-                                    <label class="form-label" for="Company_type">Select Company Type</label>
-                                    <datalist id="company_names">
-                                        {% for Org_Type in Org_Type %}
-                                        <option value="{{Org_Type.org_type}}">
-                                        {% endfor %}
-                                    </datalist>
-                                </div>
+                                <select id="Company_type" name="Company_type" class="form-control">
+                                    <option value="">Select Company Type</option>
+                                    {% for Org_Type in Org_Type %}
+                                    <option value="{{Org_Type.org_type}}">{{Org_Type}}</option>
+                                    {% endfor %}
+                                </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
-                                <select id="location" name="location" class="form-control">
+                                <select id="Country" name="Country" class="form-control">
                                     <option value="">Select Country</option>
                                     {% for Location in Locations %}
                                     <option value="{{ Location.location }}">{{Location}}</option>
                                     {% endfor %}
                                 </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <select id="city" name="city" class="form-control">
                                     <option value="">Select City</option>
-                                        {% for city in citys %}
-                                        <option value="{{ city.city }}">{{city}}</option>
-                                        {% endfor %}
+                                    {% for city in citys %}
+                                    <option value="{{ city.city }}">{{city}}</option>
+                                    {% endfor %}
                                 </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
@@ -77,47 +80,55 @@
                                     <option value="{{ lead_name.Lead_Name }}">{{lead_name.Lead_Name}}</option>
                                     {% endfor %}
                                 </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
-                                <select class="form-control"  id="bussinesstype" name="bussinesstype" >
+                                <select class="form-control" id="bussinesstype" name="bussinesstype">
                                     <option value="">Business Type</option>
-                                        {% for value, label in BUSINESS_TYPE_CHOICES %}
-                                            <option value="{{ value }}">{{ label }}</option>
-                                        {% endfor %}
-                                  </select>
+                                    {% for value, label in BUSINESS_TYPE_CHOICES %}
+                                    <option value="{{ value }}">{{ label }}</option>
+                                    {% endfor %}
+                                </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
-                        </div>
-                        <div class="col-3 mb-4 d-flex align-items-center justify-content-between">
-                            <select class="form-multi-select w-100" name="products" id="products" multiple data-coreui-search="true">
-                                {% for Product in Products %}
-                                <option value="{{Product.Product_Name}}">{{Product.Product_Name}}</option>
-                                {% endfor %}
-                            </select>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
-                                <div class="form-outline" data-mdb-input-init>
-                                    <input type="number" id="Amount" name="Amount" class="form-control" />
-                                    <label class="form-label" for="form12">Proposal Budget</label>
-                                </div>
+                                <select class="form-multi-select w-100" name="products" id="products" multiple data-coreui-search="true">
+                                    {% for Product in Products %}
+                                    <option value="{{Product.Product_Name}}">{{Product.Product_Name}}</option>
+                                    {% endfor %}
+                                </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="number" id="finallybudjet" name="finallybudjet" class="form-control" />
-                                    <label class="form-label" for="form12">Final budget</label>
+                                    <input type="number" id="Amount" name="Amount" class="form-control"/>
+                                    <label class="form-label" for="Amount">Proposal Budget</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="date" id="enddate" name="enddate" class="form-control" />
-                                    <label class="form-label" for="form12">End Date</label>
+                                    <input type="number" id="finallybudjet" name="finallybudjet" class="form-control"/>
+                                    <label class="form-label" for="finallybudjet">Final budget</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="mb-4">
+                                <div class="form-outline" data-mdb-input-init>
+                                    <input type="date" id="enddate" name="enddate" class="form-control"/>
+                                    <label class="form-label" for="enddate">End Date</label>
+                                </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
@@ -125,35 +136,39 @@
                                 <select id="Prioritys" name="Prioritys" class="form-control">
                                     <option value="">Priority</option>
                                     {% for value, label in Prioritys %}
-                                        <option value="{{ value }}">{{ label }}</option>
+                                    <option value="{{ value }}">{{ label }}</option>
                                     {% endfor %}
                                 </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="email" id="email" name="email" class="form-control" />
-                                    <label class="form-label" for="form12">Email</label>
+                                    <input type="email" id="email" name="email" class="form-control"/>
+                                    <label class="form-label" for="email">Email</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
-                                <select  id="satus" name="satus" class="form-control">
+                                <select id="satus" name="satus" class="form-control">
                                     <option value="">Select Status</option>
-                                        {% for value, label in Statuss %}
-                                            <option value="{{ value }}">{{ label }}</option>
-                                        {% endfor %}
+                                    {% for value, label in Statuss %}
+                                    <option value="{{ value }}">{{ label }}</option>
+                                    {% endfor %}
                                 </select>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="mb-4">
                                 <div class="form-outline" data-mdb-input-init>
-                                    <input type="date" id="callbackdate" name="callbackdate" class="form-control" />
-                                    <label class="form-label" for="form12">Call Back Date</label>
+                                    <input type="date" id="callbackdate" name="callbackdate" class="form-control"/>
+                                    <label class="form-label" for="callbackdate">Call Back Date</label>
                                 </div>
+                                <p class="p-0 m-0 text-danger small"></p>
                             </div>
                         </div>
                         <div class="col-6">
@@ -161,12 +176,14 @@
                                 <textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
                                 <label class="form-label" for="comments">Additional Remarks</label>
                             </div>
+                            <p class="p-0 m-0 text-danger small"></p>
                         </div>
                         <div class="col-6">
                             <div class="form-outline" data-mdb-input-init>
                                 <textarea class="form-control" id="Remarks" name="Remarks" rows="4"></textarea>
                                 <label class="form-label" for="Remarks">Call Back Comments</label>
                             </div>
+                            <p class="p-0 m-0 text-danger small"></p>
                         </div>
                     </div>
             </div>
@@ -174,7 +191,7 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <input type="submit" class="btn btn-primary" value="Create">
             </div>
-                </form>
+            </form>
         </div>
     </div>
 </div>
