--- a/templates/Revaa/single_customer_page.html
+++ b/templates/Revaa/single_customer_page.html
@@ -6,6 +6,7 @@ Customer {{get_data.org_name}} Page | Revaa Digital Solution
 {% endblock %}
 
 {% block content %}
+{% include 'inc/messages.html' %}
 <section class="content">
     <div class="container-fluid">
         <div class="row mt-4">
