--- a/templates/Revaa/single_lead_page.html
+++ b/templates/Revaa/single_lead_page.html
@@ -6,6 +6,7 @@ Lead {{get_data.org_name}} | Revaa Digital Solution
 {% endblock %}
 
 {% block content %}
+{% include 'inc/messages.html' %}
 <section class="content">
     <div class="container-fluid">
         <div class="row mt-4">
