--- a/templates/inc/single_lead_view_page.html
+++ b/templates/inc/single_lead_view_page.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="mt-3">
                     <p class="mt-3 mb-2 p-0">Call back Date</p>
-                    <p class="m-0 h5" style="width: fit-content;">{{get_data.follow_up}}</p>
+                    <p class="m-0 h5" style="width: fit-content;">{{get_data.call_back}}</p>
                 </div>
                 <h1 class="m-0 mt-3 d-flex align-items-center">
                     <i class='bx bx-rupee'></i>
